# nihility-terminal

./: .gitignore  Cargo.toml  README.md
dev-client/: Cargo.toml
dev-client/src/: config.rs  grpc.rs  main.rs
nihility-common/: Cargo.toml  build.rs
nihility-common/proto/: instruct.proto  manipulate.proto  module_info.proto  test.proto
nihility-common/src/: lib.rs
nihility-common/src/submodule/: mod.rs
nihility-terminal/: Cargo.toml
nihility-terminal/src/: config.rs  error.rs  lib.rs  main.rs
nihility-terminal/src/alternate/: achieve.rs  actuator.rs  config.rs  implement.rs  info.rs  mod.rs  module.rs  module_manager.rs  pipe.rs
nihility-terminal/src/communicat/operate/: mod.rs  pipe.rs
nihility-terminal/src/core/: encoder.rs  mod.rs  module_manager.rs  pipe.rs
nihility-terminal/src/core/encoder/: mod.rs
nihility-terminal/src/entity/: instruct.rs  manipulate.rs  mod.rs
nihility-terminal/src/exchange_actuator/: config.rs  mod.rs  notify.rs
proto/: test.proto
src/: check.rs  config.rs  error.rs  lib.rs  log.rs  main.rs
src/communicat/: grpc.rs  mock.rs  mod.rs  multicast.rs  pipe.rs  windows_named_pipe.rs
src/communicat/grpc/: mod.rs
src/communicat/grpc/client/: instruct.rs  manipulate.rs
src/communicat/grpc/server/: instruct.rs  manipulate.rs  mod.rs  submodule.rs
src/communicat/operate/: grpc.rs  mod.rs  windows_named_pipe.rs
src/core/: grpc.rs  manager_heartbeat.rs  manager_instruct.rs  manager_manipulate.rs  manager_submodule.rs  mod.rs  multicast.rs  pipe.rs  windows_named_pipe.rs
src/core/core_thread/: mod.rs
src/core/core_thread/heartbeat_manager/: mod.rs  simple.rs
src/core/core_thread/instruct_manager/: mod.rs  simple.rs
src/core/core_thread/manipulate_manager/: mod.rs  simple.rs
src/core/core_thread/submodule_manager/: mod.rs  simple.rs
src/core/encoder/: mock.rs  mod.rs  sentence_transformers.rs
src/core/heartbeat_manager/: manager_heartbeat.rs  mod.rs
src/core/instruct_encoder/: mod.rs  sentence_transformers.rs
src/core/instruct_manager/: grpc_qdrant.rs  manager_instruct.rs  mock.rs  mod.rs
src/core/instruct_matcher/: grpc_qdrant.rs  instant_distance.rs  mod.rs
src/core/manipulate_manager/: manager_manipulate.rs  mod.rs
src/core/module_manager/: grpc_qdrant.rs  grpc_qrdant.rs  mod.rs
src/core/operation_recorder/: log.rs  mod.rs  sqlite.rs
src/core/submodule_manager/: manager_submodule.rs  mod.rs
src/core/submodule_store/: hash_map.rs  mod.rs
src/entity/: instruct.rs  manipulate.rs  mod.rs  module.rs  submodule.rs
src/exchange_actuator/: config.rs  mod.rs  notify.rs
src/server/: mod.rs
src/submodule/: info.rs
