[package]
name = "nihility-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
tokio = { version = "1.34", features = ["full"] }
local-ip-address = "0.5"
prost = "0.12"
time = {version = "0.3", features = ["macros"]}
tonic = "0.10"
regex = "1.9"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ndarray = "0.15"
ort = {version = "1.16", features = ["half", "load-dynamic"], default-features = false}
tokenizers = "0.15"
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
qdrant-client = { version = "1.6.0" }
nihility-common = { git = "https://git.nihilityer.top:8443/nihilityer/nihility-common", tag = "v0.0.9" }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }

