[package]
name = "nihility-terminal"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "ansi"] }
tracing-appender = { version = "0.2" }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
prost = "0.12"
ureq = {version = "2.9", default-features = false, features = ["tls"]}
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
time = { version = "0.3", features = ["macros"] }
tonic = "0.10"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ndarray = "0.15"
ort = { version = "2.0.0-alpha.4", features = ["half", "load-dynamic", "ndarray"], default-features = false }
tokenizers = "0.15"
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
qdrant-client = { version = "1.7.0" }
nihility-common = { git = "https://github.com/nihilityer/nihility-common", tag = "v0.3.1" }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4"

[profile.release]
lto = true
opt-level = 's'
panic = "unwind"

[profile.dev]
panic = "unwind"