[package]
name = "dev_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
tokio = { version = "1", features = ["full", "tracing"] }
prost = "0.11"
tonic = "0.9.2"
local-ip-address = "0.5.4"
time = {version = "0.3", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["json"] }
nihility-common = { path = "../nihility-common" }
