[package]
name = "nihility-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
local-ip-address = "0.5.4"
prost = "0.11"
tonic = "0.9.2"
regex = "1.9.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["json"] }
nihility-common = { path = "../nihility-common" }
