[package]
name = "nihility-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.5"
prost = "0.11"
time = {version = "0.3", features = ["macros"]}
tonic = "0.9"
regex = "1.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
ort = {version = "1.16", features = ["copy-dylibs", "half", "load-dynamic"]}
tokenizers = "0.14"
figment = { version = "0.10", features = ["json"] }
nihility-common = { path = "../nihility-common" }
